02-infra/kubernetes/manifests/busybox-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: online-shop-demo
spec:
  containers:
    - name: busybox
      image: busybox:1.36.1
      command:
        - sleep
        - "3600"
